# myip-tui

./: .gitignore  Cargo.toml  README.md  setup.sh
src/: main.rs  network.rs  ui.rs
